# juce-tutorial

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  JUCE_Tutorial_Architecture.md  Module_04_Summary.md  QUICK_REFERENCE.md  README.md  README_Plugin.md  build_linux.sh  build_macos_ios.sh  build_plugin.sh  build_windows.bat  deploy.sh  kilo_code_task_jul-31-2025_1-35-02-pm.md
Source/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedAudioComponent.h
Source/AUv3/: AUv3Editor.h
Source/AdvancedDSP/: BiquadFilter.h  MultiBandEQ.h
Source/Exercises/: Exercise1_ConceptRefactoring.h
Source/ModernCPP/: AudioConcepts.h  CompileTimeOptimization.h  ConceptConstrainedDSP.h  FunctionalAudio.h  MetaprogrammingDSP.h  ModernMemoryManagement.h  PerformanceProfiler.h
Source/SharedComponents/: ParameterManager.cpp  ParameterManager.h  TargetDetection.h
Source/Tests/: ModernAudioTests.cpp
Source/Visualization/: SpectrumAnalyzer.h
Source/iOS/: TouchInterface.cpp  TouchInterface.h
cmake/: CodeSigning.cmake  notarize.sh.in
examples/: CMakeLists.txt  README.md
examples/01-hello-juce/: CMakeLists.txt  README.md
examples/01-hello-juce/Source/: Main.cpp  MainComponent.h
examples/03-basic-synthesizer/: README.md
kilo/: condensed-context.md  stats.md
learning-paths/: README.md  beginner-path.md  plugin-developer-path.md
scripts/: validate_plugins.sh
tutorials/: Module_01_JUCE_Basics.md  Module_02_Basic_GUI_Components.md  Module_03_Audio_Processing_Fundamentals.md  Module_04_Plugin_Architecture.md  Module_05_Dual_Target_Setup.md  Module_06_Advanced_Audio_Features.md  Module_07_Modern_CPP_Integration.md  README.md
